--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http-proxy-middleware": "^0.17.2",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
+    "mock.js": "^0.2.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "postcss-cssnext": "^2.9.0",
