--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "milligram": "^1.2.4",
-    "element-ui": "^1.1.3",
+    "element-ui": "^1.1.6",
     "vue": "^2.1.7"
   },
   "devDependencies": {
@@ -41,6 +41,7 @@
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "mock.js": "^0.2.0",
+    "mockjs": "^1.0.1-beta3",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "postcss-cssnext": "^2.9.0",
